--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp": "^3.9.1",
     "menubar": "^5.2.0",
     "node-simple-logger": "0.0.1",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "source-map-support": "^0.4.2"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "electron-packager": "^8.4.0",
     "gulp": "^3.9.1",
