--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "config-browserify": "^1.0.5",
     "electron-packager": "^8.4.0",
+    "envify": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.3.2",
@@ -46,7 +50,9 @@
     "gulp-sourcemaps": "^1.9.1",
     "gulp-util": "^3.0.8",
     "rimraf": "^2.5.4",
-    "unitest": "^0.14.2"
+    "unitest": "^0.14.2",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "engines": {
     "node": "6.4.0"
