--- a/package.json
+++ b/package.json
@@ -1,60 +1,21 @@
 {
   "name": "text-logger",
   "version": "0.0.0",
-  "private": true,
   "main": "index.js",
-  "description": "log text with hotkeys",
-  "license": "N/A",
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:ovekyc/----.git"
-  },
+  "license": "MIT",
+  "repository": "git@github.com:ovekyc/textlogger.git",
   "scripts": {
-    "build-test": "gulp build:test",
-    "test": "BABEL_ENV=test NODE_ENV=test npm run build-test && gulp test",
-    "lint": "gulp lint",
-    "start": "electron .",
-    "build": "gulp build && electron-packager . TextLogger --platform=darwin --arch=x64 --version=0.36.0 --icon=Icon.icns --overwrite",
-    "clean": "gulp clean"
+    "start": "electron ."
   },
-  "pre-commit": [
-    "test"
-  ],
   "dependencies": {
-    "electron": "^1.4.13",
-    "gulp": "^3.9.1",
     "menubar": "^5.2.0",
-    "node-simple-logger": "0.0.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "source-map-support": "^0.4.2"
+    "react-dom": "^15.4.1"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-plugin-__coverage__": "^11.0.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "config-browserify": "^1.0.5",
-    "electron-packager": "^8.4.0",
-    "envify": "^4.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-changed": "^1.3.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-image": "^2.7.2",
-    "gulp-nodemon": "^2.2.1",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-util": "^3.0.8",
-    "rimraf": "^2.5.4",
-    "unitest": "^0.14.2",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "engines": {
-    "node": "6.4.0"
+    "babel-register": "^6.18.0",
+    "electron": "^1.4.3"
   }
 }
