--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "electron ."
   },
   "dependencies": {
+    "gen-readlines": "^0.1.3",
     "menubar": "^5.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
