--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "start": "electron ."
   },
   "dependencies": {
-    "gen-readlines": "^0.1.3",
     "menubar": "^5.2.0",
     "react": "^15.4.1",
     "react-addons-update": "^15.4.1",
@@ -17,6 +16,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-register": "^6.18.0",
     "electron": "^1.4.3"
   }
