--- a/.eslintrc
+++ b/.eslintrc
@@ -194,7 +194,7 @@
     "sort-vars": 0, // sort variables within the same declaration block (off by default)
     "space-before-blocks": [1, "always"], // require or disallow space before blocks (off by default)
     "space-before-function-paren": [1, {"anonymous": "always", "named": "never"}], // require or disallow space before function opening parenthesis (off by default)
-    //"space-in-brackets": [1, "never"], // require or disallow spaces inside brackets (off by default)
+    "space-in-brackets": [1, "never"], // require or disallow spaces inside brackets (off by default)
     "space-in-parens": [1, "never"], // require or disallow spaces inside parentheses (off by default)
     "space-infix-ops": [1], // require spaces around operators
     "space-unary-ops": [1, {"words": true, "nonwords": false}], // Require or disallow spaces before/after unary operators (words on by default, nonwords off by default)
