--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "repository": "git@github.com:ovekyc/textlogger.git",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "lint": "./node_modules/.bin/eslint app/**/*.js"
   },
   "dependencies": {
     "babel-register": "^6.18.0",
@@ -18,6 +19,8 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "electron": "^1.4.3"
+    "electron": "^1.4.3",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0"
   }
 }
