--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "./node_modules/.bin/eslint app/**/*.js",
     "test": "npm lint"
   },
+  "pre-commit": [
+    "test"
+  ],
   "dependencies": {
     "babel-register": "^6.18.0",
     "menubar": "^5.2.0",
@@ -22,6 +25,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "electron": "^1.4.3",
     "eslint": "^3.12.2",
-    "eslint-plugin-react": "^6.8.0"
+    "eslint-plugin-react": "^6.8.0",
+    "pre-commit": "^1.2.2"
   }
 }
