--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,11 @@
     "es6": true
   },
 
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
+
+  "parser": "babel-eslint",
 
   "ecmaFeatures": {
     "arrowFunctions": true,
