Added delete function (#2)
* add Delete Function

* changed code style

* add Delete Function

* changed code style

* apply autobind module

* change expression

--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
 
   "parser": "babel-eslint",
 
+  "parser": "babel-eslint",
+
   "ecmaFeatures": {
     "arrowFunctions": true,
     "binaryLiterals": true,
