--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node-notifier": "^4.6.1",
     "react": "^15.4.1",
     "react-addons-update": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
