--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node-notifier": "^4.6.1",
     "react": "^15.4.1",
     "react-addons-update": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-select": "^1.0.0-rc.2"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
